--- a/.github/workflows/deploy_msa_ordersystem.yml
+++ b/.github/workflows/deploy_msa_ordersystem.yml
@@ -30,7 +30,7 @@ jobs:
         run: aws eks update-kubeconfig --name  3team-cluster --region ap-northeast-2
 
       - name: Login to ECR
-        id: login-ecr
+        id: login-ecr-apigateway
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: build and push docker image to ecr
@@ -50,7 +50,7 @@ jobs:
 
       # ordering
       - name: Login to ECR
-        id: login-ecr
+        id: login-ecr-ordering
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: build and push docker image to ecr
@@ -70,7 +70,7 @@ jobs:
 
       # product
       - name: Login to ECR
-        id: login-ecr
+        id: login-ecr-product
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: build and push docker image to ecr
@@ -90,7 +90,7 @@ jobs:
 
       # member
       - name: Login to ECR
-        id: login-ecr
+        id: login-ecr-member
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: build and push docker image to ecr
